# nextRelease

./: .gitignore  README.MD  main.py  pyproject.toml
tests/: main_test.py
