[tool.poetry]
name = "currentrelease"
version = "0.1.0"
description = ""
authors = ["Brad Holland <bholland@bamboohealth.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.6"
pandas = "^1.5.0"


[tool.poetry.group.test.dependencies]
freezegun = "^1.2.2"
pytest = "^7.1.3"
unittest = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

